[package]
authors = ["cst1"]
name = "gitcustoms"
description = "A simple Git identity checker and manager."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.7.1"
serde = { version = "1.0.152", features = ["derive"] }
clap = { version = "4.1.4", features = ["derive"] }
console = "0.15.5"
anyhow = "1.0.68"
